# gc_fst

./: Cargo.toml  Readme.md
examples/: create_opening_bnr.rs
src/: lib.rs  main.rs
