[package]
name = "gc_fst"
version = "0.1.0"
edition = "2021"

description = "Gamecube ISO unpacker and rebuilder."
readme = "Readme.md"
license = "MIT OR Apache-2.0"
keywords = ["cli", "utility", "encoding", "game", "linux"]
categories = ["filesystem", "command-line-utilities"]
repository = "https://github.com/AlexanderHarrison/gc_fst"
documentation = "https://docs.rs/gc_fst/"

[lib]
name = "gc_fst"
path = "src/lib.rs"

[[bin]]
name = "gc_fst"
path = "src/main.rs"

[dev-dependencies]
lodepng = "3.10"
